# olimpiadas-prog

./: .gitignore  DOCUMENTACION_PRODUCTOS.md  DOCUMENTACION_PRODUCTOS_PARTE2.md  DOCUMENTACION_PRODUCTOS_PARTE3.md  DOCUMENTACION_STORE.md  Documentacion_test_producto.md  ENDPOINTS_DISPONIBILIDAD.md  FILTROS_PRODUCTOS.md  FUNCIONALIDADES_FILTRADO_FRONTEND.md  LICENSE  Makefile  README.md  README_CRUD_Operations_Tests.md  Resumen_Sistema_Productos_Stock_Ventas.docx  SERVICIO_ORDENES.md  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_cart_diagnostic.py  test_endpoints_produccion.py  test_rapido.py
docs/: productos_y_disponibilidad.md
myweb/: conftest.py  create_test_data.py  env.py  pytest.ini  run_get_products_test.py  setup-dev.ps1  test_cart_simple.py  test_cart_user_integration.py  test_get_products.py  test_get_products_fixed.py  test_simple_diagnostic.py  ubications.json
myweb/api/: urls.py
myweb/assets/: chunk-2ZPS6AD7.js  chunk-33JCK2G2.js  chunk-3HHCO3RP.js  chunk-3SIJEUGM.js  chunk-3V5FGDDO.js  chunk-46EFSMAL.js  chunk-4VG35R37.js  chunk-5DTUMX5W.js  chunk-6JCK4BKH.js  chunk-7S6PP2G7.js  chunk-AJCOPC3Q.js  chunk-AT2QGDAO.js  chunk-BCDW6CLQ.js  chunk-BHTYGTD2.js  chunk-CQILXSLR.js  chunk-D5UKB6LQ.js  chunk-DASYG7K6.js  chunk-EEVTYTHO.js  chunk-EHKJQPCQ.js  chunk-EZQISATL.js  chunk-F7O66H7G.js  chunk-F7PPLVIA.js  chunk-FFPGBVGJ.js  chunk-GJJL4BZ4.js  chunk-HLE6HNTB.js  chunk-HNZQVEQV.js  chunk-JIXPPSV7.js  chunk-JWDQ64E6.js  chunk-KUUEALDQ.js  chunk-LCNIAU75.js  chunk-LJD7ZPIV.js  chunk-NBXBPMOV.js  chunk-O7IREQD2.js  chunk-OASB7JVU.js  (+32 more)
(+215 files in other folders)
