[project]
name = "olimpiadas-prog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "django-ninja>=1.4.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
